tests/baselines/reference/parameterDecoratorTarget1.errors.txt
tests/cases/compiler/parameterDecoratorTarget1.ts(4,10): error TS2345: Argument of type 'A' is not assignable to parameter of type 'typeof A'.
  Type 'A' is missing the following properties from type 'typeof A': prototype, staticMethod


==== tests/cases/compiler/parameterDecoratorTarget1.ts (1 errors) ====
    const decorator = (target: typeof A, key: string, index: number) => {};
    
    class A {
    	method(@decorator param1: string) {}
    	        ~~~~~~~~~
!!! error TS2345: Argument of type 'A' is not assignable to parameter of type 'typeof A'.
!!! error TS2345:   Type 'A' is missing the following properties from type 'typeof A': prototype, staticMethod
    	static staticMethod(@decorator param1: string) {}
    	constructor(@decorator param1: string) {}
    }
    